--- a/src/app/add-author/add-author.component.html
+++ b/src/app/add-author/add-author.component.html
@@ -1,42 +1,43 @@
 <section class="custom-modalbox" [hidden]="isHidden">
-  <h2 mat-dialog-title>{{mode}}</h2>
-  <mat-dialog-content  [formGroup]="myFormModel" class="row g-3" method="post">
+  <h2 mat-dialog-title></h2>
+  <mat-dialog-content id="content"  [formGroup]="myFormModel" class="row g-3" method="post">
 
 
     <fieldset class="col-10">
       <label for="validationAuthorForename" class="form-label">Author's Forename</label>
 
+        <mat-form-field appearance="fill">
+          <input matInput type="text" [matAutocomplete]="auto" (ngModelChange)="toggleAuthorForenamePlaceholder()" placeholder="Insert an Author Forename" class="form-control " id="validationAuthorForename" aria-describedby="validationServer03Feedback" required formControlName="authorForenameInput">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let authorForename of filteredAuthorsForenameList"  [value]="authorForename" matTooltip="{{authorForename}} | Population: {{authorForename}}">{{authorForename}}</mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
 
-      <mat-form-field appearance="fill">
-      <input matInput type="text" [matAutocomplete]="auto" (ngModelChange)="toggleAuthorForenamePlaceholder()" placeholder="Insert an Author Forename" class="form-control " id="validationAuthorForename" aria-describedby="validationServer03Feedback" required formControlName="authorForenameInput">
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let authorForename of filteredAuthorsForenameList"  [value]="authorForename" matTooltip="{{authorForename}} | Population: {{authorForename}}">{{authorForename}}</mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-
-      <div id="validationServer04Feedback" class="invalid-feedback d-block" *ngIf="validationErrors?.forename">
-        <span class="text text-danger"> {{validationErrors.forename[0]}} </span>
-      </div>
+        <div id="validationServer04Feedback" class="invalid-feedback d-block" *ngIf="validationErrors?.forename">
+          <span class="text text-danger"> {{validationErrors.forename[0]}} </span>
+        </div>
     </fieldset>
 
     <fieldset class="col-10">
       <label for="validationAuthorSurname" class="form-label">Author's Surname</label>
       <mat-form-field appearance="fill">
-      <input matInput type="text" [matAutocomplete]="auto2" (ngModelChange)="toggleAuthorSurnamePlaceholder()" placeholder="Insert an Author Surname" aria-describedby="validationServer03Feedback" id="validationAuthorSurname" required formControlName="authorSurnameInput">
+        <input matInput type="text" [matAutocomplete]="auto2" (ngModelChange)="toggleAuthorSurnamePlaceholder()" placeholder="Insert an Author Surname" aria-describedby="validationServer03Feedback" id="validationAuthorSurname" required formControlName="authorSurnameInput">
         <mat-autocomplete #auto2="matAutocomplete">
           <mat-option *ngFor="let authorSurname of filteredAuthorsSurnameList" [value]="authorSurname" matTooltip="{{authorSurname}} | Population: {{authorSurname}}">{{authorSurname}}</mat-option>
         </mat-autocomplete>
       </mat-form-field>
 
       <div id="validationServer03Feedback" class="invalid-feedback d-block" *ngIf="validationErrors?.surname">
-      <span class="text text-danger"> {{validationErrors.surname[0]}} </span>
-    </div>
-
-    <div class = "col-12">
-      <button class="btn btn-primary" type="submit" (click)="saveAuthor()">Submit</button>
-    </div>
+        <span class="text text-danger"> {{validationErrors.surname[0]}} </span>
+      </div>
     </fieldset>
 
-   </mat-dialog-content>
-    <button type="close" class="btn-close" aria-label="Close"></button>
+
+
+
+  </mat-dialog-content>
+  <div mat-dialog-actions [align]="'end'" class="button-group">
+    <button mat-raised-button class="mat-raised-button btn-lg" type="submit" (click)="saveAuthor()">Submit</button>
+    <button mat-raised-button (click)="closeDialog()">Close </button>
+  </div>
 </section>
