--- a/src/scss/01-settings/_variable.scss
+++ b/src/scss/01-settings/_variable.scss
@@ -4,6 +4,7 @@ $beige: #fdf0e3;
 $medium-blue: #1e1eff;
 $dark-blue: #00008B;
 $green: #60DC64;
+$orange: #FFA500;
 $blue-light: #D3EAFA;
 $blue-dark: #3E5CC5;
 $blue-text: #3B99E1;
