--- a/src/scss/01-settings/_variable.scss
+++ b/src/scss/01-settings/_variable.scss
@@ -5,9 +5,11 @@ $medium-blue: #1e1eff;
 $dark-blue: #00008B;
 $green: #60DC64;
 $orange: #FFA500;
+$dark-orange: #FF8C00;
 $blue-light: #D3EAFA;
 $blue-dark: #3E5CC5;
 $blue-text: #3B99E1;
+
 $white: #FFFFFF;
 $gray-light: #F9FBFE;
 $ivory: #fffff0;
