--- a/src/scss/06-components/_nav.scss
+++ b/src/scss/06-components/_nav.scss
@@ -3,6 +3,29 @@
   &_item {
     color: $white;
     display: block;
+    font-size: $font-size-3;
+    padding-bottom: $grid-base * .75;
+    padding-top: $grid-base * .75;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+
+
+    &:hover {
+      color: $dark-orange;
+
+    }
+
+    @include large-up {
+      display: inline-block;
+      margin-left: $grid-base * 2.5;
+      width: auto;
+    }
+  }
+
+  &_items {
+    color: $dark-orange;
+    display: block;
     font-size: $font-size-5;
     padding-bottom: $grid-base * .75;
     padding-top: $grid-base * .75;
@@ -12,7 +35,7 @@
 
 
     &:hover {
-      color: $white;
+      color: $dark-orange;
     }
 
     @include large-up {
