--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,16 +4,16 @@
     <h3 class="text-center text-uppercase">Log in to the catalogue</h3>
     <form class="form-signin" [formGroup]="myFormModel">
 
-      <input name="username" type="text"  id="inputUsername" class="form-control"  placeholder="Login" required formControlName="loginInput">
+      <input [(ngModel)]="login" name="login" type="text"  id="inputUsername" class="form-control"  placeholder="Login" required formControlName="loginInput">
       <div class="col-10" *ngIf="loggingValidationError !== null && loggingValidationError?.username">
         <span class="text text-danger">{{loggingValidationError.username[0]}}</span>
       </div>
 
-      <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required formControlName="passwordInput">
+      <input [(ngModel)]="password" name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required formControlName="passwordInput">
       <div class="col-10" *ngIf="loggingValidationError !== null && loggingValidationError?.password">
         <span class="text text-danger">{{loggingValidationError.password[0]}}</span>
       </div>
-      <button type="submit" class="c-btn c-btn--primary" (click)="signIn()">Sign in</button>
+      <button type="submit" class="c-btn c-btn--primary" (click)="signIn(login)">Sign in</button>
       <button type="button" class="c-btn c-btn--dark-blue" (click)="registerNewUser()">Create an account</button>
     </form>
 
