--- a/src/scss/07-templates/_result-list.scss
+++ b/src/scss/07-templates/_result-list.scss
@@ -1,6 +1,6 @@
 .sk-result-list {
   background-color: $ivory;
-  padding-top: $grid-base*4;
+  //padding-top: $grid-base*4;
   //margin: 0 auto;
 
 
