--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,8 +46,9 @@
 .username {
   color: darkorange;
 }
-.witaj {
-  color: $dark-blue;
+.usernames {
+  font-weight: bold;
+  color: darkorange;
 }
 
 .c-nav-item {
